--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,49 +16,46 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
+          
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Run tests
-        # use npm test unless you actually have a "test:ci" script
         run: npm test
-
+        
       - name: Upload coverage report
-        if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4   # 👈 updated
         with:
           name: coverage-report
           path: coverage/
 
   deploy:
     needs: test
-    # only deploy if tests passed AND we're on main or master
     if: ${{ needs.test.result == 'success' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-
+          
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
-
+        
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
+        
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
+        
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
