--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A proxy that replaces 'Yale' with 'Fale' in web content",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "vercel-build": "echo 'Building for Vercel deployment'",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --ci --coverage"
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "vercel-build": "echo 'Building for Vercel deployment'",
+  "test": "jest --runInBand",
+  "test:watch": "jest --watch --runInBand",
+  "test:ci": "jest --runInBand --ci --coverage"
   },
   "engines": {
     "node": ">=18.x"
